[package]
name = "cuckoo-clock-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }

[dependencies.cuckoo-clock]
path = ".."

[[bin]]
name = "filter"
path = "fuzz_targets/filter.rs"
test = false
doc = false
bench = false
